--- a/index.html
+++ b/index.html
@@ -15,36 +15,42 @@
   <h2>เลือกชุดแต่งงาน</h2>
   <div class="dress-list">
     <div class="card">
-      <img src="https://via.placeholder.com/300x400?text=WD-001" alt="">
+      <!-- เปลี่ยน src เป็นไฟล์ในเครื่อง (หรือ url ของคุณ) -->
+      <img src="images/wd-001.jpg" alt="WD-001 ชุดเจ้าสาว A-line"
+           loading="lazy"
+           onerror="this.onerror=null;this.src='images/placeholder.jpg'">
       <h4>WD-001 ชุดเจ้าสาว A-line</h4>
       <button onclick="selectDress('WD-001','ชุดเจ้าสาว A-line')">เลือกชุดนี้</button>
     </div>
 
     <div class="card">
-      <img src="https://via.placeholder.com/300x400?text=WD-002" alt="">
+      <img src="images/wd-002.jpg" alt="WD-002 ชุดหางปลา"
+           loading="lazy"
+           onerror="this.onerror=null;this.src='images/placeholder.jpg'">
       <h4>WD-002 ชุดหางปลา</h4>
       <button onclick="selectDress('WD-002','ชุดหางปลา')">เลือกชุดนี้</button>
     </div>
 
     <div class="card">
-      <img src="https://via.placeholder.com/300x400?text=WD-003" alt="">
+      <img src="images/wd-003.jpg" alt="WD-003 ชุดไทยเจ้าสาว"
+           loading="lazy"
+           onerror="this.onerror=null;this.src='images/placeholder.jpg'">
       <h4>WD-003 ชุดไทยเจ้าสาว</h4>
       <button onclick="selectDress('WD-003','ชุดไทยเจ้าสาว')">เลือกชุดนี้</button>
     </div>
   </div>
 
+  <!-- script ของคุณเดิมยังใช้ได้เลย -->
   <script>
   const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyyAKalB8vGE29s748REN3kUw7lUPzpUpAoSulfZI7ho9_cN3Ws5FZnCwJOIXrKMJi1/exec'; // ใส่ของคุณ
 
   function selectDress(code, name) {
     const callbackName = 'gsCallback_' + Date.now() + '_' + Math.floor(Math.random()*1000);
     window[callbackName] = function(data) {
-      // ทำความสะอาด script & callback หลังใช้
       try { 
         if (data && data.result === 'success') alert('บันทึกเรียบร้อย ✅');
         else alert('ผิดพลาด: ' + (data.message || 'ไม่ทราบสาเหตุ'));
       } finally {
-        // ลบ callback และ script tag
         delete window[callbackName];
         var s = document.getElementById(callbackName + '_script');
         if (s) s.remove();
@@ -63,10 +69,7 @@
     script.async = true;
     document.head.appendChild(script);
   }
-</script>
+  </script>
 
 </body>
 </html>
-
-
-
