--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="dress-list">
     <div class="card">
       <!-- เปลี่ยน src เป็นไฟล์ในเครื่อง (หรือ url ของคุณ) -->
-      <img src="https://drive.google.com/file/d/1SXb5gZjaw_HrjHLZ0d5FtJi1-_OmOGl1/view?usp=sharing" alt="WD-001 ชุดเจ้าสาว A-line"
+      <img src="https://drive.google.com/uc?export=view&id=1SXb5gZjaw_HrjHLZ0d5FtJi1-_OmOGl1" alt="WD-001 ชุดเจ้าสาว A-line"
            loading="lazy"
            onerror="this.onerror=null;this.src='images/placeholder.jpg'">
       <h4>WD-001 ชุดเจ้าสาว A-line</h4>
@@ -24,7 +24,7 @@
     </div>
 
     <div class="card">
-      <img src="https://drive.google.com/file/d/16YS3W_nYHh3wSkKqtjWvVgiU1YMtIZCO/view?usp=sharing" alt="WD-002 ชุดหางปลา"
+      <img src="https://drive.google.com/uc?export=view&id=16YS3W_nYHh3wSkKqtjWvVgiU1YMtIZCO" alt="WD-002 ชุดหางปลา"
            loading="lazy"
            onerror="this.onerror=null;this.src='images/placeholder.jpg'">
       <h4>WD-002 ชุดหางปลา</h4>
@@ -32,7 +32,7 @@
     </div>
 
     <div class="card">
-      <img src="https://drive.google.com/file/d/1elhZnAqexbFeAApyExkzpfuSb4CBO--2/view?usp=sharing" alt="WD-003 ชุดไทยเจ้าสาว"
+      <img src="https://drive.google.com/uc?export=view&id=1elhZnAqexbFeAApyExkzpfuSb4CBO--2" alt="WD-003 ชุดไทยเจ้าสาว"
            loading="lazy"
            onerror="this.onerror=null;this.src='images/placeholder.jpg'">
       <h4>WD-003 ชุดไทยเจ้าสาว</h4>
@@ -73,4 +73,5 @@
 
 </body>
 </html>
+
 
